fix alignment in carousel

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -226,12 +226,15 @@ h1 {
 }
 
 .slide-image {
-  margin-top: 6.75vh;
+  max-width: 95%;
+  height: auto;
+  margin-top: 2rem; 
 }
 
 .slide-title {
   color: #7E030D;
   font-size: 2.5vw;
+  margin-top: 1.4rem;
 }
 
 .slide-text {
@@ -363,7 +366,11 @@ h1 {
 
   .slide-image-container {
     width: 50vw;
-    margin-left: 3.5vw;
+    margin-left: 2vw;
+  }
+
+  .slide-image {
+    margin-top: 1vh;
   }
 
   .slide-title {
